# clds

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md  vcpkg.json
.github/: copilot-instructions.md  fabricbot.json
devdoc/: clds_hash_table_requirements.md  clds_hazard_pointers_requirements.md  clds_hazard_pointers_thread_helper_requirements.md  clds_singly_linked_list_requirements.md  clds_sorted_list_requirements.md  clds_st_hash_set_requirements.md  lock_free_set_requirements.md  lru_cache_design.md  lru_cache_requirements.md  mpsc_lock_free_queue_requirements.md  tcall_dispatcher_requirements.md  thread_notifications_dispatcher_requirements.md  tqueue_requirements.md
src/: clds_hash_table.c  clds_hazard_pointers.c  clds_hazard_pointers.cpp  clds_hazard_pointers_thread_helper.c  clds_sorted_list.c  (+10 more)
tests/: CMakeLists.txt
tests/clds_hash_table_int/: CMakeLists.txt  clds_hash_table_int.c  main.c  nothing.c
tests/clds_hash_table_perf/: CMakeLists.txt  clds_hash_table_perf.c  clds_hash_table_perf.cpp  clds_hash_table_perf.h  main.c  test_hash_func.cpp  test_hash_func.h
tests/clds_hash_table_snapshot_perf/: CMakeLists.txt  clds_hash_table_snapshot_perf.c
tests/clds_hash_table_ut/: CMakeLists.txt  clds_hash_table_ut.c  clds_hash_table_ut_pch.h  main.c
tests/clds_hash_table_with_memory_limit_int/: CMakeLists.txt  clds_hash_table_with_memory_limit_int.c
tests/clds_hazard_pointers_int/: CMakeLists.txt  clds_hazard_pointers_int.c
tests/clds_hazard_pointers_thread_helper_perf/: CMakeLists.txt  clds_hazard_pointers_thread_helper_perf.c
tests/clds_hazard_pointers_thread_helper_ut/: CMakeLists.txt  clds_hazard_pointers_thread_helper_mocked.c  clds_hazard_pointers_thread_helper_ut.c  clds_hazard_pointers_thread_helper_ut_pch.h
tests/clds_hazard_pointers_ut/: CMakeLists.txt  clds_hazard_pointers_ut.c  clds_hazard_pointers_ut_pch.h  main.c
tests/clds_singly_linked_list_int/: CMakeLists.txt  clds_singly_linked_list_int.c  main.c  nothing.c
tests/clds_singly_linked_list_perf/: CMakeLists.txt  clds_singly_linked_list_perf.c  clds_singly_linked_list_perf.h  main.c
tests/clds_singly_linked_list_ut/: CMakeLists.txt  clds_singly_linked_list_ut.c  clds_singly_linked_list_ut_pch.h  main.c
tests/clds_sorted_list_int/: CMakeLists.txt  clds_sorted_list_int.c  main.c
tests/clds_sorted_list_perf/: CMakeLists.txt  clds_sorted_list_perf.c  clds_sorted_list_perf.h  main.c
tests/clds_sorted_list_ut/: CMakeLists.txt  clds_sorted_list_ut.c  clds_sorted_list_ut_pch.h  main.c
tests/clds_st_hash_set_ut/: CMakeLists.txt  clds_st_hash_set_ut.c  clds_st_hash_set_ut_pch.h  main.c
tests/lock_free_set_int/: CMakeLists.txt  lock_free_set_int.c  main.c
tests/lock_free_set_perf/: CMakeLists.txt  lock_free_set_perf.c  lock_free_set_perf.h  main.c
tests/lock_free_set_ut/: CMakeLists.txt  lock_free_set_ut.c  lock_free_set_ut_pch.h  main.c
tests/lru_cache_int/: CMakeLists.txt  lru_cache_int.c
tests/lru_cache_ut/: CMakeLists.txt  lru_cache_ut.c  lru_cache_ut_pch.h
tests/mpsc_lock_free_queue_int/: CMakeLists.txt  main.c  mpsc_lock_free_queue_int.c
tests/mpsc_lock_free_queue_ut/: CMakeLists.txt  main.c  mpsc_lock_free_queue_ut.c  mpsc_lock_free_queue_ut_pch.h
tests/reals/: CMakeLists.txt  real_clds_hash_table.c  real_clds_hash_table.h  real_clds_hash_table_renames.h  real_clds_hazard_pointers.c  real_clds_hazard_pointers.h  real_clds_hazard_pointers_renames.h  real_clds_hazard_pointers_thread_helper.c  real_clds_hazard_pointers_thread_helper.h  real_clds_hazard_pointers_thread_helper_renames.h  real_clds_singly_linked_list.c  real_clds_singly_linked_list.h  real_clds_singly_linked_list_renames.h  real_clds_sorted_list.c  real_clds_sorted_list.h  real_clds_sorted_list_renames.h  real_clds_st_hash_set.c  real_clds_st_hash_set.h  real_clds_st_hash_set_renames.h  real_inactive_hp_thread_queue.c  real_inactive_hp_thread_queue.h  real_inactive_hp_thread_queue_renames.h  real_lock_free_set.c  real_lock_free_set.h  real_lock_free_set_renames.h  real_mpsc_lock_free_queue.c  real_mpsc_lock_free_queue.h  real_mpsc_lock_free_queue_renames.h  real_tcall_dispatcher_thread_notification_call.c  real_tcall_dispatcher_thread_notification_call.h  real_tcall_dispatcher_thread_notification_call_renames.h  real_thread_notifications_dispatcher.c  real_thread_notifications_dispatcher.h  real_thread_notifications_dispatcher_renames.h
tests/reals_ut/: CMakeLists.txt  clds_reals_ut.c  clds_reals_ut_pch.h  main.c
tests/tcall_dispatcher_int/: CMakeLists.txt  tcall_dispatcher_foo.c  tcall_dispatcher_foo.h  tcall_dispatcher_int.c
tests/tcall_dispatcher_ut/: CMakeLists.txt  tcall_dispatcher_ut.c
tests/thread_notifications_dispatcher_int/: CMakeLists.txt  thread_notifications_dispatcher_int.c
tests/thread_notifications_dispatcher_ut/: CMakeLists.txt  thread_notifications_dispatcher_ut.c
tests/thread_notifications_dispatcher_wo_init_ut/: CMakeLists.txt  thread_notifications_dispatcher_wo_init_ut.c
tests/tqueue_int/: CMakeLists.txt  tqueue_foo.c  tqueue_foo.h  tqueue_int.c
tests/tqueue_ut/: CMakeLists.txt  tqueue_ut.c
thread_notifications_lackey_dll/: CMakeLists.txt
thread_notifications_lackey_dll/devdoc/: thread_notifications_lackey_dll_requirements.md
thread_notifications_lackey_dll/inc/thread_notifications_lackey_dll/: thread_notifications_lackey_dll.h
thread_notifications_lackey_dll/src/: thread_notifications_lackey_dll.c  thread_notifications_lackey_dll.def
thread_notifications_lackey_dll/tests/: CMakeLists.txt
thread_notifications_lackey_dll/tests/thread_notif_lackey_dll_wo_init_ut/: CMakeLists.txt  thread_notif_lackey_dll_wo_init_ut.c  thread_notifications_lackey_dll_mocked.c
thread_notifications_lackey_dll/tests/thread_notifications_lackey_dll_int/: CMakeLists.txt  thread_notifications_lackey_dll_int.c
thread_notifications_lackey_dll/tests/thread_notifications_lackey_dll_ut/: CMakeLists.txt  thread_notifications_lackey_dll_mocked.c  thread_notifications_lackey_dll_ut.c
thread_notifications_lackey_dll/tests/thread_notifications_lackey_dll_wo_init_ut/: CMakeLists.txt
(+18 files in other folders)
